--- a/backend/.env
+++ b/backend/.env
@@ -9,6 +9,6 @@ USER_NAME=root
 PASSWORD=
 DATABASE=proj_uruguayos
 JWT_SECRET=mfefkuhi345bhf543fdo3k2rjkofn2mbikb19rh
-CLIENT_URL=localhost://4200
+USER_URL=localhost://4200
 NODE_ENV=development
 BASE_DIR=
