creacion de blog

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
 BCRYPT_SALT=10
 EMAIL_HOST=smtp.gmail.com
-EMAIL_USERNAME=paola@xxx.com
+EMAIL_USERNAME=pmiramonteso@gmail.com
 EMAIL_PORT=587
 EMAIL_PASSWORD=XXXX
-FROM_EMAIL=paola@xxx.com
+FROM_EMAIL=pmiramonteso@gmail.com.com
 HOST_NAME=localhost
 USER_NAME=root
 PASSWORD=
