--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@tinymce/tinymce-angular": "^8.0.1",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
@@ -51,6 +52,7 @@
     "postcss": "^8.4.47",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.14",
+    "tinymce": "^7.5.1",
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
     "zone.js": "^0.14.10"
