--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,9 @@
             "styles": [
               "src/styles.scss",
               "node_modules/leaflet/dist/leaflet.css",
-              "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+              "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css",
+              "node_modules/@fullcalendar/core/main.css",
+              "node_modules/@fullcalendar/daygrid/main.css"
             ],
             "scripts": [
               "node_modules/leaflet/dist/leaflet.js"
@@ -93,7 +95,9 @@
             "styles": [
               "src/styles.scss",
               "node_modules/leaflet/dist/leaflet.css",
-              "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+              "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css",
+              "node_modules/@fullcalendar/core/main.css",
+              "node_modules/@fullcalendar/daygrid/main.css"
             ],
             "scripts": [
               "node_modules/leaflet/dist/leaflet.js"
