--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@fullcalendar/angular": "^6.1.15",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
     "@tinymce/tinymce-angular": "^8.0.1",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
