--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,8 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-                "src/assets",
-                "src/favicon.ico"
+                "src/favicon.ico",
+                "src/assets"
             ],
             "styles": [
               "src/styles.scss",
@@ -89,8 +89,8 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/assets",
-              "src/favicon.ico"
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss",
