--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.2.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4",
     "nodemailer": "^6.9.16",
