--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
-    "chart.js": "^4.4.6",
+    "chart.js": "^3.9.1",
     "daisyui": "^4.12.14",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
@@ -53,6 +53,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "leaflet": "^1.9.4",
     "morgan": "^1.10.0",
+    "ng2-charts": "^3.1.2",
     "postcss": "^8.4.47",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.14",
