--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_USERNAME=pmiramonteso@gmail.com
 EMAIL_PORT=587
 EMAIL_PASSWORD=XXXX
-FROM_EMAIL=pmiramonteso@gmail.com.com
+FROM_EMAIL=pmiramonteso@gmail.com
 HOST_NAME=localhost
 USER_NAME=root
 PASSWORD=
